# gtk-hello

./: .gitignore  README.md  com.github.libredeb.gtk-hello.yml  meson.build
.github/workflows/: main.yml
data/: gschema.xml  gtk-hello.desktop.in  gtk-hello.metainfo.xml.in  gtk-hello.service
po/: POTFILES  com.github.libredeb.gtk-hello.pot  de.po  es.po
src/: Application.vala
